project ( SaberLanguage 
	LANGUAGES C CXX)
cmake_minimum_required ( VERSION 2.8 )

OPTION(BUUILD_MT_CODE "create md code" ON)
#生成调试用exe
OPTION(BUILD_TEST_EXECUTABLES "build exe" ON)

if (NOT CMAKE_BUILD_TYPE MATCHES "Debug" AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
	set(CMAKE_BUILD_TYPE "CMAKE_BUILD_TYPE Debug")
endif()

IF(MSVC)
	IF (BUUILD_MT_CODE)
		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
		set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
		set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
		
	ELSE()
		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
		set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
		set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
	ENDIF()
ENDIF()

MESSAGE(STATUS "value=${CMAKE_CXX_FLAGS_DEBUG}") 

if (MSVC)
	IF(CMAKE_BUILD_TYPE MATCHES "Release")
		set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
	ELSEIF(CMAKE_BUILD_TYPE MATCHES "Debug")
		set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
	ELSE()
		message(STATUS "Not Support Type")
	ENDIF()
else()
	IF(CMAKE_BUILD_TYPE MATCHES "Release")
		set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/Release")
	ELSEIF(CMAKE_BUILD_TYPE MATCHES "Debug")
		set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/Debug")
	ELSE()
		message(STATUS "Not Support Type")
	ENDIF()
endif()

add_subdirectory(Lex)
add_subdirectory(syntax)
add_subdirectory(bnf)
